--- a/auction_app/templates/user_home.html
+++ b/auction_app/templates/user_home.html
@@ -29,7 +29,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>auction_mania</title>
+    <title>auction_scido</title>
 
     <meta name="description" content="" />
 
@@ -135,7 +135,7 @@
 
         <aside id="layout-menu" class="layout-menu menu-vertical menu ">
           <div class="app-brand">
-            <a href="#" class="app-brand-link"><h3>Auction Mania</h3></a>
+            <a href="#" class="app-brand-link"><h3>Auction scido demo1</h3></a>
 
             <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
               <i class="bx bx-chevron-left bx-sm align-middle"></i>
@@ -160,7 +160,7 @@
         <a href="{% url 'user_add_credits' %}" class="menu-link">
             <i class="bx bx-wallet-alt me-1"></i>
 
-        <div data-i18n="Basic">Add Credits</div>
+        <div data-i18n="Basic">All euros</div>
         </a>
     </li>
     {% endif %}
